[MINOR] - Filling out cycling content of hover boxes. Fixed some css during hover and website on mobile. Need to fill out more content in boxes next

--- a/css/style.css
+++ b/css/style.css
@@ -1093,13 +1093,14 @@ background-color:white;
         margin:3vh 0;
         padding:3vh 0;
         font-family: 'Raleway', sans-serif;
-        color: #8a8472;
-        /*border:solid 1px black;*/
+        /*color: #8a8472;*/
+        color:#6c757d;
         /*background-color:white;*/
     }
 
     #whyride > div {
         justify-content: center;
+        margin-bottom: 1vw;
     }
 
     /*Default css of each 'case' box*/
@@ -1108,7 +1109,7 @@ background-color:white;
         width: 20vw;
         height:20vw;
         margin: 1vw;
-        border: solid 0.5vw #8a8472;
+        border: solid 0.5vw #6c757d;
         padding: 1.5vw;
         background-color:white;
         -webkit-transition: all 0.3s;
@@ -1128,7 +1129,10 @@ background-color:white;
         border-color:black;
         z-index: 5;
         opacity: 1;
-        width:40vw;
+        width:30vw;
+        height: 30vw;
+        overflow-y:scroll;
+        overflow-x:hidden;
         -webkit-transition: all 0.5s;
         -moz-transition: all 0.5s;
         -o-transition: all 0.5s;
@@ -1140,10 +1144,34 @@ background-color:white;
         opacity: 0.3;
         }
 
+    /*Custom Scrollbar for case boxes (I might not need this if I make them look better on mobile by making the box bigger)*/
+        .cases::-webkit-scrollbar-track {
+            background-color: #F5F5F5;
+            }
+
+        .cases::-webkit-scrollbar {
+            width: 4px;
+            background-color: #F5F5F5;
+            }
+
+        .cases::-webkit-scrollbar-thumb {
+            background-color: #000000;
+        }
+
+
+    @media (max-width: 1124px) {
+    .cases h4 {
+        font-size:2.5vmin;
+        line-height: 2.5vmin;
+    }   
+    }
+
+
+
 /* Landing Page Stuff */
     #landingpagemap{
       position:relative;
-      z-index: -20;
+      z-index: 0;
       width: 100%;
       height: 595px;
       border: solid 2px #8a8472;
@@ -1152,10 +1180,9 @@ background-color:white;
     @media (max-width: 768px) {
     #landingpagemap{
       position:relative;
-      z-index: -1;
+      z-index: 0;
       width: 100%;
       height: 255px;
-
     } 
     }
 
